Remove admin lowercase user emails maintenance function
This resolves #441
